...
    const val MY_MOVIES_SORT_DROPDOWN_SECTION = "MY_MOVIES_SORT_DROPDOWN_SECTION"
    const val TOGGLE_FAVORITE_BUTTON = "TOGGLE_FAVORITE_BUTTON"

    fun moviePreview(movieTitle: String) = "MOVIE_PREVIEW_$movieTitle"

    // Detail Screen
    const val MOVIE_DETAIL_IMAGE = "MOVIE_DETAIL_IMAGE"
    const val SET_MOVIE_AS_FAVORITE_BUTTON = "SET_MOVIE_AS_FAVORITE_BUTTON"
    const val DETAIL_WATCHLIST_BUTTON = "DETAIL_WATCHLIST_BUTTON"
    const val DETAIL_SEEN_BUTTON = "DETAIL_SEEN_BUTTON"
    const val DETAIL_MOVIE_TITLE = "DETAIL_MOVIE_TITLE"
    const val DETAIL_MOVIE_OVERVIEW = "DETAIL_MOVIE_OVERVIEW"
    const val DETAIL_RATING_DISPLAY = "DETAIL_RATING_DISPLAY"

}
